--- a/hmily-demo/hmily-demo-dubbo/hmily-demo-dubbo-inventory/src/main/resources/application.yml
+++ b/hmily-demo/hmily-demo-dubbo/hmily-demo-dubbo-inventory/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     datasource:
         driver-class-name:  com.mysql.jdbc.Driver
         url: jdbc:mysql://192.168.6.128:3306/tcc_stock?useUnicode=true&characterEncoding=utf8
-        username: root
+        username: hap
         password: 123456
 
 
