--- a/hmily-demo/hmily-demo-dubbo/hmily-demo-dubbo-order/src/main/resources/application.yml
+++ b/hmily-demo/hmily-demo-dubbo/hmily-demo-dubbo-order/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     datasource:
         driver-class-name:  com.mysql.jdbc.Driver
         url: jdbc:mysql://192.168.6.128:3306/tcc_order?useUnicode=true&characterEncoding=utf8
-        username: root
+        username: hap
         password: 123456
 
 org:
@@ -25,7 +25,7 @@ org:
             hmilyDbConfig :
                  driverClassName  : com.mysql.jdbc.Driver
                  url :  jdbc:mysql://192.168.6.128:3306/tcc?useUnicode=true&amp;characterEncoding=utf8
-                 username : root
+                 username : hap
                  password : 123456
 
         #repositorySupport : redis
