--- a/hmily-demo/hmily-demo-dubbo/hmily-demo-dubbo-order/src/main/resources/application.yml
+++ b/hmily-demo/hmily-demo-dubbo/hmily-demo-dubbo-order/src/main/resources/application.yml
@@ -7,9 +7,9 @@ server:
 spring:
     datasource:
         driver-class-name:  com.mysql.jdbc.Driver
-        url: jdbc:mysql://192.168.6.128:3306/tcc_order?useUnicode=true&characterEncoding=utf8
-        username: hap
-        password: 123456
+        url: jdbc:mysql://192.168.1.11:3307/tcc_order?useUnicode=true&characterEncoding=utf8
+        username: root
+        password: 1
 
 org:
     dromara:
@@ -24,9 +24,9 @@ org:
             async-threads: 32
             hmilyDbConfig :
                  driverClassName  : com.mysql.jdbc.Driver
-                 url :  jdbc:mysql://192.168.6.128:3306/tcc?useUnicode=true&amp;characterEncoding=utf8
-                 username : hap
-                 password : 123456
+                 url :  jdbc:mysql://192.168.1.11:3307/tcc?useUnicode=true&amp;characterEncoding=utf8
+                 username : root
+                 password : 1
 
         #repositorySupport : redis
         #tccRedisConfig:
